# musubi

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  index.html
.github/workflows/: doxygen.yml
cmake/modules/: FindEpoxy.cmake
docs/: annotated.html  classes.html  dir_36b808a910a189755f763a31640e1fbe.html  dir_36b808a910a189755f763a31640e1fbe_dep.map  dir_36b808a910a189755f763a31640e1fbe_dep.md5  dir_74ddd022213235742261e3c6efe2a442.html  dir_74ddd022213235742261e3c6efe2a442_dep.map  dir_74ddd022213235742261e3c6efe2a442_dep.md5  dir_82b1fda9854745cb19a569201959fdf3.html  dir_82b1fda9854745cb19a569201959fdf3_dep.map  dir_82b1fda9854745cb19a569201959fdf3_dep.md5  dir_eaf808de6cfe15b2340c90c0c865df04.html  dir_eaf808de6cfe15b2340c90c0c865df04_dep.map  dir_eaf808de6cfe15b2340c90c0c865df04_dep.md5  dir_f7e95dbe127529764fc53aa7e4eb3266.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  inherit_graph_15.map  inherit_graph_15.md5  inherit_graph_16.md5  inherit_graph_17.map  inherit_graph_17.md5  (+36 more)
docs/d0/d03/: structmusubi_1_1gl_1_1texture__region-members.html
docs/d0/d1f/: classmusubi_1_1archive__read__error.html
docs/d0/d34/: structmusubi_1_1asset__loader_3_01std_1_1basic__string_3_01CharT_00_01Traits_00_01Allocator_01_4_01_4.html
docs/d0/d50/: classmusubi_1_1input__poller.html
docs/d0/d57/: sdl__input__poller_8h__dep__incl.map  sdl__input__poller_8h__dep__incl.md5
docs/d0/d63/: rw__lock_8h.html  rw__lock_8h_source.html
docs/d0/db2/: namespacemusubi.html
docs/d0/ddb/: event__looper_8h__dep__incl.map  event__looper_8h__dep__incl.md5
docs/d0/ddf/: classmusubi_1_1gl_1_1gl__texture__renderer__coll__graph.map  classmusubi_1_1gl_1_1gl__texture__renderer__coll__graph.md5
docs/d0/df0/: structmusubi_1_1pixmap__traits_3_01pixmap__format_1_1r8_01_4__inherit__graph.map  structmusubi_1_1pixmap__traits_3_01pixmap__format_1_1r8_01_4__inherit__graph.md5
docs/d0/df9/: classmusubi_1_1asset__registry-members.html
docs/d1/d0b/: structmusubi_1_1camera.html
docs/d1/d0d/: window_8h__dep__incl.map  window_8h__dep__incl.md5
docs/d1/d20/: structmusubi_1_1window_1_1start__info.html
docs/d1/d25/: renderer_8h__incl.map  renderer_8h__incl.md5
docs/d1/d29/: structmusubi_1_1pixmap__traits_3_01pixmap__format_1_1rgb8_01_4.html
docs/d1/d32/: classmusubi_1_1gl_1_1texture-members.html
docs/d1/d39/: shapes_8h.html  shapes_8h_source.html
docs/d1/d77/: classmusubi_1_1blocking__looper-members.html
docs/d1/d8f/: classmusubi_1_1illegal__state__error__coll__graph.map  classmusubi_1_1illegal__state__error__coll__graph.md5
docs/d1/db3/: pixmap_8h.html  pixmap_8h_source.html
docs/d1/dd8/: structmusubi_1_1gl_1_1texture__region__coll__graph.map  structmusubi_1_1gl_1_1texture__region__coll__graph.md5
docs/d1/df5/: asset__loader_8h__incl.map  asset__loader_8h__incl.md5
docs/d1/dff/: classmusubi_1_1assertion__error__inherit__graph.map  classmusubi_1_1assertion__error__inherit__graph.md5
docs/d2/d02/: classmusubi_1_1sdl_1_1sdl__input__poller__coll__graph.md5
docs/d2/d0b/: application_8h__dep__incl.map  application_8h__dep__incl.md5
docs/d2/d35/: classmusubi_1_1asset__registry.html
docs/d2/d4b/: classmusubi_1_1pixmap.html
docs/d2/d57/: classmusubi_1_1assertion__error.html
docs/d2/d6e/: structmusubi_1_1asset__loader_3_01std_1_1shared__ptr_3_01Asset_01_4_01_4__coll__graph.map  structmusubi_1_1asset__loader_3_01std_1_1shared__ptr_3_01Asset_01_4_01_4__coll__graph.md5
docs/d2/d93/: structmusubi_1_1asset__registry_1_1mpack.html
docs/d2/d9c/: namespacemusubi_1_1sdl.html
docs/d2/da3/: classmusubi_1_1gl_1_1shader__program-members.html
docs/d2/da8/: classmusubi_1_1resource__read__error__inherit__graph.map  classmusubi_1_1resource__read__error__inherit__graph.md5
docs/d2/dd7/: classmusubi_1_1pixmap__inherit__graph.map  classmusubi_1_1pixmap__inherit__graph.md5
docs/d2/dee/: structmusubi_1_1asset__loader_3_01std_1_1unique__ptr_3_01Asset_01_4_01_4-members.html
docs/d3/d6b/: structmusubi_1_1gl_1_1texture__region.html
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_b.js  classes_c.js  classes_d.js  (+60 more)
include/: application.h  input.h  stub.h  window.h
include/sdl/: sdl_init.h  sdl_input_poller.h  sdl_window.h
include/util/: common.h  rw_lock.h
licenses/: epoxy  libarchive  nlohmann_json  sdl2
musubi/: CMakeLists.txt
musubi-demo/: CMakeLists.txt  main.cpp
musubi-demo/assets/test/: pack.json  test.txt
musubi/include/: application.h  event_looper.h  exception.h  input.h
musubi/include/musubi/: application.h  asset_loader.h  asset_registry.h  camera.h  common.h  docs.h  event_looper.h  exception.h  input.h  pixmap.h  renderer.h  rw_lock.h  screen.h  window.h
musubi/include/musubi/gl/: common.h  shaders.h  shapes.h  textures.h
musubi/include/musubi/sdl/: sdl_error.h  sdl_exception.h  sdl_init.h  sdl_input_poller.h  sdl_window.h
musubi/include/sdl/: sdl_init.h  sdl_input_poller.h  sdl_window.h
musubi/include/util/: rw_lock.h
musubi/src/: asset_registry.cpp  camera.cpp  event_looper.cpp  exception.cpp  input.cpp  pixmap.cpp  renderer.cpp  screen.cpp
musubi/src/gl/: shaders.cpp  shapes.cpp  textures.cpp
musubi/src/sdl/: sdl_init.cpp  sdl_input_poller.cpp  sdl_window.cpp
src/: event_looper.cpp  stub.cpp
src/sdl/: sdl_init.cpp  sdl_input_poller.cpp  sdl_window.cpp
tools/: mpack.py
(+215 files in other folders)
